Ensure images overflow on both sides and fix their height #2630

--- a/src/html-pages/home-page/render-as-html/_hero.scss
+++ b/src/html-pages/home-page/render-as-html/_hero.scss
@@ -7,10 +7,6 @@
 @use 'common';
 @use 'hero-search-form';
 
-@mixin _enough-space-for-sciety-triangles() {
-  @media screen and (min-width: functions.px-to-em(1700px)) { @content; }
-}
-
 @mixin _vertical-spacing-in-hero() {
   margin-bottom: functions.px-to-rem(20px);
 
@@ -24,37 +20,15 @@
   background-color: settings.$colour-brand;
   display: grid;
   grid-template-columns: 1fr auto 1fr;
-      img {
-        opacity: 0.1;
-        overflow: hidden;
-      }
-  // &::before,
-  // &::after {
-  //   content: '';
-  //   display: block;
-  //   background-color: settings.$colour-brand;
 
-  //   @include _enough-space-for-sciety-triangles {
-  //     background-repeat: no-repeat;
-  //     background-size: contain;
-  //     opacity: 0.1;
-  //   }
-  // }
+  img {
+    opacity: 0.1;
+    overflow: hidden;
+  }
+}
 
-  // &::before {
-  //   @include _enough-space-for-sciety-triangles {
-  //     background-image: url('/static/images/home-page/sciety-pattern-left.svg');
-  //     background-position: 0 0;
-  //   }
-  // }
-
-  // &::after {
-  //   @include _enough-space-for-sciety-triangles {
-  //     background-image: url('/static/images/home-page/sciety-pattern-right.svg');
-  //     background-position: 100% 0;
-  //   }
-  // }
-
+.home-page-hero__left_image {
+  justify-self: end;
 }
 
 .home-page-hero {
